--- a/OpenGLSession1/OpenGLSession1.vcxproj.filters
+++ b/OpenGLSession1/OpenGLSession1.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Triangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dependencies\includes\glad\glad.h">
@@ -909,6 +912,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Triangle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Dependencies\includes\stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
