--- a/OpenGLSession1/OpenGLSession1.vcxproj
+++ b/OpenGLSession1/OpenGLSession1.vcxproj
@@ -133,9 +133,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Dependencies\includes\glm\detail\glm.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="Line.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="MyObject.cpp" />
     <ClCompile Include="ReadFiles.cpp" />
     <ClCompile Include="stb_image.cpp" />
@@ -143,6 +146,7 @@
     <ClCompile Include="Vertex.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Dependencies\includes\glad\glad.h" />
     <ClInclude Include="Dependencies\includes\GLFW\glfw3.h" />
     <ClInclude Include="Dependencies\includes\GLFW\glfw3native.h" />
@@ -430,6 +434,8 @@
     <ClInclude Include="Dependencies\includes\glm\vector_relational.hpp" />
     <ClInclude Include="Dependencies\includes\KHR\khrplatform.h" />
     <ClInclude Include="Dependencies\includes\stb_image.h" />
+    <ClInclude Include="Line.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="MyObject.h" />
     <ClInclude Include="ReadFiles.h" />
     <ClInclude Include="Triangle.h" />
